--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+plugins {
+    id 'com.google.gms.google-services' version '4.4.2' apply false
+}
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.2'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -8,9 +22,6 @@ allprojects {
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
