--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: ^2.0.5
+  dartz: ^0.10.1
+  firebase_auth: ^4.5.0
+  cloud_firestore: ^4.9.0
+  google_sign_in: ^6.1.0
+  shared_preferences: ^2.1.0
+  firebase_core: ^2.32.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
