--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,19 +9,34 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.6
+  google_fonts: ^6.1.0
+  font_awesome_flutter: ^10.6.0
   equatable: ^2.0.5
   dartz: ^0.10.1
-  firebase_auth: ^4.5.0
-  cloud_firestore: ^4.9.0
-  google_sign_in: ^6.1.0
-  shared_preferences: ^2.1.0
-  firebase_core: ^2.32.0
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  google_sign_in: ^6.1.6
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  shared_preferences: ^2.2.2
+  cloud_firestore: ^4.13.1
+  firebase_storage: ^11.5.1
+  image_picker: ^1.0.4
+  intl: ^0.18.1
+  sqflite: ^2.3.0
+  qr_flutter: ^4.1.0
+  carousel_slider: ^4.2.1
+  mobile_scanner: ^3.5.2
+  avatar_glow: ^2.0.2
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
